// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expense list with empty expense list 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-wide-screens"
    >
      Expense
    </div>
    <div
      className="show-for-wide-screens"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        <h3>
          No expenses
        </h3>
      </span>
    </div>
  </div>
</div>
`;

exports[`render expense list with expenses from fixture 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-wide-screens"
    >
      Expense
    </div>
    <div
      className="show-for-wide-screens"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={2650}
      createdAt={0}
      description="coffee"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={20065}
      createdAt={-345600000}
      description="breakfast"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={32065}
      createdAt={345600000}
      description="dinner"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
